--- a/backend/views/pages/newseason.ejs
+++ b/backend/views/pages/newseason.ejs
@@ -59,6 +59,12 @@
         <div class="addListPlayer">
           <div class="player-team-side">
             <h3 class="player-heading">Player in Team</h3>
+            <div class="player-filters">
+              <span class="player-name">Name</span>
+              <span class="player-shirt-number">Shirt Number</span>
+              <span class="player-goal">Goal</span>
+              <span ></span>
+            </div>
             <ul class="teamPlayerListModal">
               <!-- Danh sách cầu thủ trong team sẽ được hiển thị ở đây -->
             </ul>
@@ -66,6 +72,12 @@
           <div class="divider"></div>
           <div class="player-free-side">
             <h3 class="player-heading">Free Players</h3>
+            <div class="player-filters">
+              <span class="player-name">Name</span>
+              <span class="player-shirt-number">Shirt Number</span>
+              <span class="player-goal">Goal</span>
+              <span ></span>
+            </div>
             <ul class="playerListModal">
               <!-- Danh sách cầu thủ tự do sẽ được hiển thị ở đây -->
             </ul>
