--- a/backend/views/partials/header.ejs
+++ b/backend/views/partials/header.ejs
@@ -9,9 +9,9 @@
                 Rank
             </li>
         </a>
-        <a class="header__menu--link" href="/api/v1/team">
+        <a class="header__menu--link" href="">
             <li class="header__menu--item">
-                Teams
+                PLayer
             </li>
         </a>
         <a class="header__menu--link" href="">
