--- a/backend/views/pages/playerinteam.ejs
+++ b/backend/views/pages/playerinteam.ejs
@@ -22,7 +22,7 @@
                     <div class="teams_content" id="listPlayers">
                         <% players.forEach(player => { %>        
                                 <div class="teams_content__boxitem">
-                                    <img class="teams_content__boxitem--img" src="https://via.placeholder.com/150" alt="Player Image">
+                                    <img class="teams_content__boxitem--img" src="<%= player.image %>" alt="Player Image">
                                     <p class="teams_content__boxitem--name" style="color: #fff;"><%= player.name %></p>
                                 </div>
                         <% }) %>
