--- a/backend/views/partials/header.ejs
+++ b/backend/views/partials/header.ejs
@@ -9,7 +9,7 @@
         <h5 class="header__brand--name">Bundesliga</h5>
     </div>
     <ul class="header__menu">
-        <a class="header__menu--link" href="">
+        <a class="header__menu--link" href="/api/v1/match/rank">
             <li class="header__menu--item">
                 Rank
             </li>
