--- a/backend/views/pages/addMatch.ejs
+++ b/backend/views/pages/addMatch.ejs
@@ -66,7 +66,7 @@
                         </div>
                     </div>
                     <div>
-                        <button type="submit" onclick="addMatch()">Add Match</button>
+                        <button type="submit" id="addMatchSubmitButton">Add Match</button>
                     </div>
                 </form>
 
@@ -81,9 +81,12 @@
             document.addEventListener('DOMContentLoaded', async function () {
                 const addMatchButton = document.getElementById('addMatchButton');
                 const addMatchForm = document.getElementById('addMatchForm');
+                const submitButton = document.getElementById('addMatchSubmitButton');
                 const overlay = document.getElementById('overlay');
                 const matchContainer = document.getElementById('matchContainer');
                 const seasonId = '<%= data.ID_season %>';
+
+                submitButton.addEventListener('click', addMatch);
 
                 addMatchButton.addEventListener('click', function () {
                     if (addMatchForm.style.display === 'none' || addMatchForm.style.display === '') {
@@ -104,14 +107,11 @@
                 async function displayMatches() {
                     try {
                         // Gọi API 1 để lấy danh sách trận đấu theo ID mùa giải
-                        const matchResponse = await fetch(`/api/v1/match/BySeason/${seasonId}`, {
-                            method: 'POST', 
+                        const matchResponse = await fetch(`/api/v1/match/view/idseason/${seasonId}`, {
+                            method: 'GET',
                             headers: {
                                 'Content-Type': 'application/json'
                             },
-                            body: JSON.stringify({
-                                seasonId
-                            })
                         });
 
                         if (!matchResponse.ok) throw new Error('Failed to fetch matches');
@@ -123,14 +123,11 @@
                         for (const matchItem of match) {
                             // Gọi API 2 để lấy thông tin đội bóng từ ID trận đấu trong matchteam
                             var idmatch = matchItem._id;
-                            const matchTeamsResponse = await fetch(`/api/v1/matchteam/${idmatch}`, {
-                                method: 'POST', 
+                            const matchTeamsResponse = await fetch(`/api/v1/matchteam/view/idmatch/${idmatch}`, {
+                                method: 'GET',
                                 headers: {
                                     'Content-Type': 'application/json'
                                 },
-                                body: JSON.stringify({
-                                    idmatch
-                                })
                             });
                             if (!matchTeamsResponse.ok) throw new Error('Failed to fetch match teams');
                             const {
@@ -139,14 +136,11 @@
 
                             var idteam1 = matchTeams[0].ID_team;
                             // Lấy thông tin chi tiết của đội bóng từ API 3
-                            const teamAResponse = await fetch(`/api/v1/team/${idteam1}`, {
-                                method: 'POST', 
+                            const teamAResponse = await fetch(`/api/v1/team/view/idteam/${idteam1}`, {
+                                method: 'GET',
                                 headers: {
                                     'Content-Type': 'application/json'
                                 },
-                                body: JSON.stringify({
-                                    idteam1
-                                })
                             });
                             if (!teamAResponse.ok) throw new Error('Failed to fetch team A');
                             const {
@@ -154,14 +148,11 @@
                             } = await teamAResponse.json();
 
                             var idteam2 = matchTeams[1].ID_team;
-                            const teamBResponse = await fetch(`/api/v1/team/${idteam2}`, {
-                                method: 'POST', 
+                            const teamBResponse = await fetch(`/api/v1/team/view/idteam/${idteam2}`, {
+                                method: 'GET',
                                 headers: {
                                     'Content-Type': 'application/json'
                                 },
-                                body: JSON.stringify({
-                                    idteam2
-                                })
                             });
                             if (!teamBResponse.ok) throw new Error('Failed to fetch team B');
                             const {
@@ -170,29 +161,30 @@
 
                             // Tạo HTML hiển thị trận đấu với các nút sửa và xóa
                             const matchHTML = `
-                                   <div class="match" data-match-id="${matchItem._id}">
-                                       <div class="team-info">
-                                           <span>${teamA.name}</span>
-                                           <img src="${teamA.logo}" alt="${teamA.name}">
-                                       </div>
-                                       <div class="match-details">
-                                           <span>${matchTeams[0].goal} - ${matchTeams[1].goal}</span>
-                                       </div>
-                                       <div class="team-info">
-                                           <img src="${teamB.logo}" alt="${teamB.name}">
-                                           <span>${teamB.name}</span>
-                                       </div>
-                                       <div class="match-details">
-                                           <span>Time: ${new Date(matchItem.date).toLocaleString()}</span>
-                                           <span>Stadium: ${matchItem.stadium}</span>
-                                       </div>
-                                       <div class="actions">
-                                           <button class="edit-match">Edit</button>
-                                           <button class="delete-match">Delete</button>
-                                       </div>
-                                   </div>
-                               `;
-                            matchContainer.innerHTML += matchHTML;
+                            <div class="match" data-match-id="${matchItem._id}">
+                                <div class="team-info">
+                                    <span>${teamA.name}</span>
+                                    <img src="${teamA.logo}" alt="${teamA.name}">
+                                </div>
+                                <div class="match-details">
+                                    <span>${matchTeams[0].goal} - ${matchTeams[1].goal}</span>
+                                </div>
+                                <div class="team-info">
+                                    <img src="${teamB.logo}" alt="${teamB.name}">
+                                    <span>${teamB.name}</span>
+                                </div>
+                                <div class="match-details">
+                                    <span>Time: ${new Date(matchItem.date).toLocaleString()}</span>
+                                    <span>Stadium: ${matchItem.stadium}</span>
+                                </div>
+                                <div class="actions">
+                                    <button class="edit-match">Edit</button>
+                                    <button class="delete-match">Delete</button>
+                                </div>
+                            </div>
+                            `;
+                            matchContainer.insertAdjacentHTML('afterbegin', matchHTML);
+
                         }
 
                         // Thêm sự kiện cho các nút sửa và xóa
@@ -219,101 +211,64 @@
                 async function editMatch(matchId) {
                     try {
                         // Gọi API để lấy thông tin chi tiết của trận đấu
-                        const response = await fetch(`/api/v1/match/${matchId}`, {
-                            method: 'POST', 
+                        const response = await fetch(`/api/v1/match/view/idmatch/${matchId}`, {
+                            method: 'GET',
                             headers: {
                                 'Content-Type': 'application/json'
                             },
                         });
                         if (!response.ok) throw new Error('Failed to fetch match details');
                         const match = await response.json();
-                        
-                            const matchTeamsResponse = await fetch(`/api/v1/matchteam/${matchId}`, {
-                                method: 'POST', 
-                                headers: {
-                                    'Content-Type': 'application/json'
-                                },
-                            });
-                            if (!matchTeamsResponse.ok) throw new Error('Failed to fetch match teams');
-                            const {
-                                matchTeams
-                            } = await matchTeamsResponse.json();
 
-                            var idteam1 = matchTeams[0].ID_team;
-                            // Lấy thông tin chi tiết của đội bóng từ API 3
-                            const teamAResponse = await fetch(`/api/v1/team/${idteam1}`, {
-                                method: 'POST', 
-                                headers: {
-                                    'Content-Type': 'application/json'
-                                },
-                                body: JSON.stringify({
-                                    idteam1
-                                })
-                            });
-                            if (!teamAResponse.ok) throw new Error('Failed to fetch team A');
-                            const {
-                                team: teamA
-                            } = await teamAResponse.json();
+                        const matchTeamsResponse = await fetch(`/api/v1/matchteam/view/idmatch/${matchId}`, {
+                            method: 'GET',
+                            headers: {
+                                'Content-Type': 'application/json'
+                            },
+                        });
+                        if (!matchTeamsResponse.ok) throw new Error('Failed to fetch match teams');
+                        const {
+                            matchTeams
+                        } = await matchTeamsResponse.json();
 
-                            var idteam2 = matchTeams[1].ID_team;
-                            const teamBResponse = await fetch(`/api/v1/team/${idteam2}`, {
-                                method: 'POST', 
-                                headers: {
-                                    'Content-Type': 'application/json'
-                                },
-                                body: JSON.stringify({
-                                    idteam2
-                                })
-                            });
-                            if (!teamBResponse.ok) throw new Error('Failed to fetch team B');
-                            const {
-                                team: teamB
-                            } = await teamBResponse.json();
+                        var idteam1 = matchTeams[0].ID_team;
+                        // Lấy thông tin chi tiết của đội bóng từ API 3
+
+                        var idteam2 = matchTeams[1].ID_team;
+
+
                         // Điền thông tin vào form
                         //document.getElementById('matchId').value = matchId;
                         document.getElementById('teamId1').value = idteam1;
                         document.getElementById('teamId2').value = idteam2;
-                        document.getElementById('date').value = match.date;
-                        document.getElementById('stadium').value = match.stadium;
-                        document.getElementById('description').value = match.description;
-                
+                        document.getElementById('date').value = new Date(match.data.date).toISOString().slice(0, 16);
+                        document.getElementById('stadium').value = match.data.stadium;
+                        document.getElementById('description').value = match.data.description;
+
                         // Hiển thị form
                         document.getElementById('addMatchForm').style.display = 'block';
                         document.getElementById('overlay').style.display = 'block';
-                
+
                         // Thay đổi nút submit thành "Update Match"
-                        const submitButton = document.getElementById('addMatchSubmitButton');
+
                         submitButton.textContent = 'Update Match';
-                
-                        // Gắn sự kiện cập nhật trận đấu
-                        submitButton.removeEventListener('click', addMatch); // Xóa sự kiện thêm trận đấu
-                        submitButton.addEventListener('click', function(event) {
+
+                        submitButton.removeEventListener('click', addMatch);
+                        submitButton.addEventListener('click', function (event) {
                             event.preventDefault();
-                            updateMatch(matchId);
+                            updateMatch(matchId, idteam1, idteam2);
                         });
                     } catch (error) {
                         console.error('Error fetching match details:', error);
                     }
                 }
 
-                // Hàm để xóa trận đấu
-                async function deleteMatch(matchId) {
-                    try {
-                        const response = await fetch(`/api/v1/match/${matchId}`, {
-                            method: 'DELETE'
-                        });
-                        if (!response.ok) throw new Error('Failed to delete match');
-                        // Xóa trận đấu khỏi giao diện
-                        document.querySelector(`.match[data-match-id="${matchId}"]`).remove();
-                    } catch (error) {
-                        console.error('Error deleting match:', error);
-                    }
-                }
+
 
                 // Hiển thị các trận đấu khi trang được tải
                 displayMatches();
             });
-            
+
         </script>
 </body>
 
