--- a/backend/views/pages/season_match.ejs
+++ b/backend/views/pages/season_match.ejs
@@ -29,11 +29,13 @@
             .season-name {
                 font-weight: bold;
                 margin-bottom: 5px;
+                color: rgb(0, 134, 139);
             }
 
             .season-year {
                 font-size: 12px;
                 margin-bottom: 10px;
+                color: hotpink;
             }
         </style>
 </head>
