--- a/backend/public/css/addMatch.css
+++ b/backend/public/css/addMatch.css
@@ -9,6 +9,7 @@
     display: block;
     margin-bottom: 10px;
     font-weight: bold;
+    color: #000;
 }
 
 .match-form input[type="text"],
@@ -31,6 +32,7 @@
     background-color: #333;
     color: #fff;
     padding: 10px 20px;
+    margin-left: 45%;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -79,12 +81,14 @@
 
 .match {
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
     padding: 10px;
-    background: #f4f4f4;
+    border: 3px solid #59b1b4;
     margin-bottom: 10px;
-    border-radius: 5px;
+    background: #f4f4f4;
+    color: #050404; /* Light text color for contrast */
 }
 
 .match-form {
@@ -122,18 +126,32 @@
     z-index: 5;
 }
 
-.team-info {
-    display: flex;
-    align-items: center;
-}
-
 .team-info img {
     width: 50px;
     height: 50px;
     margin-right: 10px;
     margin-left: 10px;
+    margin-top: 5px;
 }
 
-.match-details {
-    text-align: center;
+.team-info, .match-details, .actions {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 10px;
+}
+
+.actions button {
+    margin-top: 5px;
+    padding: 5px 10px;
+    width: 70px;
+    border-radius: 11px;
+    background-color: #444; /* Button background color */
+    color: #fff; /* Button text color */
+    border: none;
+    cursor: pointer;
+}
+
+.actions button:hover {
+    background-color: #666; /* Button hover background color */
 }
