--- a/backend/views/utils/link.ejs
+++ b/backend/views/utils/link.ejs
@@ -1,4 +1,7 @@
 <link rel="stylesheet" href="/css/rs.css">
 <link rel="stylesheet" href="/css/base.css">
+<link rel="stylesheet" href="/css/season.css">
+<link rel="stylesheet" href="/css/newseason.css">
+<link rel="stylesheet" href="/css/playerinteam.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/boxicons/2.1.0/css/animations.min.css" integrity="sha512-GKHaATMc7acW6/GDGVyBhKV3rST+5rMjokVip0uTikmZHhdqFWC7fGBaq6+lf+DOS5BIO8eK6NcyBYUBCHUBXA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <script src="../script/slider.js"></script>
