--- a/backend/views/partials/header.ejs
+++ b/backend/views/partials/header.ejs
@@ -14,9 +14,14 @@
                 Teams
             </li>
         </a>
+        <a class="header__menu--link" href="/api/v1/player">
+            <li class="header__menu--item">
+                Player
+            </li>
+        </a>
         <a class="header__menu--link" href="/api/v1/teammatch">
             <li class="header__menu--item">
-                Match
+                Views
             </li>
         </a>
         <a class="header__menu--link" href="">
