--- a/backend/views/pages/detailsmatch.ejs
+++ b/backend/views/pages/detailsmatch.ejs
@@ -11,6 +11,12 @@
         }
     </style>
 </head>
+<%
+let minuteString = (minutes) => {
+    if(minutes>90) return "90+"+(minutes-90);
+    return minutes.toString();
+}
+%>
 <body>
     <div class="center">
         <div class="w-1080">
@@ -35,7 +41,7 @@
                 <div class="row description__content">
                     <div>
                         <div class="flex-column">
-                            <img style="width: 60px;height: 60px;" src="https://avatarfiles.alphacoders.com/255/255802.jpg" alt="">
+                            <img style="width: 60px;height: 60px;" src="<%=team1.info.logo%>" alt="">
                             <p class="description__content--namefb"><%=team1.info.name%></p>
                         </div>
                     </div>
@@ -46,12 +52,13 @@
                     </div>
                     <div>
                         <div class="flex-column" >
-                            <img style="width: 60px;height: 60px;" src="https://avatarfiles.alphacoders.com/255/255802.jpg" alt="">
+                            <img style="width: 60px;height: 60px;" src="<%=team2.info.logo%>" alt="">
                             <p class="description__content--namefb"><%=team2.info.name%></p>
                         </div>
                     </div>
                 </div>
                 <div class="devide"></div>
+
                 <%if(team1.dataGoal.length>0||team2.dataGoal.length>0){%>
                 <div class="row description__content--goal">
                     <div>
@@ -65,7 +72,7 @@
                                 <%
                                 var minutes = goal.minutes ? goal.minutes : [];
                                 minutes.forEach(m=>{%>
-                                <%=m%>'
+                                    <%=minuteString(m)%>'
                                 <%})%>
                             </span>
                         </p>
@@ -81,7 +88,11 @@
                         %>
                         <p class="row description__content--info">
                             <span class="description__content--info__name"><%=goal.playerName%></span>
-                            <span><%=goal.minutes%>'</span>
+                            <span><%
+                                var minutes = goal.minutes ? goal.minutes : [];
+                                minutes.forEach(m=>{%>
+                                    <%=minuteString(m)%>'
+                                <%})%></span>
                         </p>
                      <%                            
                         })
@@ -103,7 +114,7 @@
                                     var cards = foul.card ? foul.card : [];
                                     for(var i = 0 ; i < minutes.length ; i++){
                                     %>
-                                        <span class="color__body--sub-fb"><%=minutes[i]%>'</span> 
+                                        <span class="color__body--sub-fb"><%=minuteString(minutes[i])%>'</span> 
                                         <%if(cards[i] == 'yellow'){%>
                                             <img class="description__content--info__foul" src="/img/yellow_card.png" alt="">
                                         <%} else {%>
@@ -130,7 +141,7 @@
                                     var cards = foul.card ? foul.card : [];
                                     for(var i = 0 ; i < minutes.length ; i++){
                                     %>
-                                        <span class="color__body--sub-fb"><%=minutes[i]%>'</span> 
+                                        <span class="color__body--sub-fb"><%=minuteString(minutes[i])%>'</span> 
                                         <%if(cards[i] == 'yellow'){%>
                                             <img class="description__content--info__foul" src="/img/yellow_card.png" alt="">
                                         <%} else {%>
@@ -145,7 +156,55 @@
                         </div>
                     </div>
                 <%}%>
-                    <p style="margin: 20px 0px 0px;">Stadium: <span>ABC park</span></p>
+                    <div style="margin: 10px 0px;" class="devide"></div>
+                    <p>Diễn biến chính của trận đấu</p>
+                    <div style="padding: 0px 28px;">
+                        <% listEvents.forEach(e => { %>
+                            <div class="details_match--content">
+                                <% if (e.type == 'goal') { %>
+                                    <div class="row mg-10-text">
+                                        <p>
+                                            <span>GOALLLL</span>
+                                            <i class="fa-solid fa-futbol"></i>
+                                        </p>
+                            
+                                        <p><%=minuteString(e.minutes[0])%>'</p>
+                                    </div>
+                                <% } else if (e.type == 'foul') { %>  
+                                    <div class="row mg-10-text">
+                                        <p>
+                                            <% if (e.card[0] == 'yellow') { %>
+                                                <%if(e.out==true){%>
+                                                    <img class="description__content--info__foul" src="/img/yellow_card.png" alt="">
+                                                <%}%>
+                                                <img class="description__content--info__foul" src="/img/yellow_card.png" alt="">
+                                                <span>THẺ VÀNG</span>
+                                                <%if(e.out==true){%>
+                                                    <span>- Cầu thủ bị truất quyền thi đấu (2 thẻ vàng)</span>
+                                                <%}%>
+                                            <% } else if (e.card[0] == 'red') { %>
+                                                <img class="description__content--info__foul" src="/img/red_card.png" alt="">
+                                                <span>THẺ ĐỎ</span>
+                                
+                                                <span>- Cầu thủ bị truất quyền thi đấu</span>
+                                            <% } %>  
+                                        </p>
+                                        <p><%= e.minutes[0] %>'</p>
+                                    </div>
+                                <% } %>
+                                <div class="devide"></div>
+                                <div class="row mg-10-text">
+                                    <div class="details_match--content__info">
+                                        <p class="details_match--content__info--name"><%= e.playerName %></p>
+                                        <p class="details_match--content__info--sub"><%= e.nameTeam %><span> #<%= e.shirtNumber %></span></p>
+                                    </div>
+                                    <img style="height: 50px; width: 50px;" src="<%=e.logoTeam%>" alt="">
+                                </div>
+                            </div>
+                        <% }) %>
+
+                    </div>
+                    <p style="margin: 20px 0px 0px;">Stadium: <span><%=match.stadium%></span></p>
             </div>
         </div>
     </div>
