--- a/backend/views/pages/addMatch.ejs
+++ b/backend/views/pages/addMatch.ejs
@@ -22,7 +22,7 @@
                 <div class="overlay" id="overlay"></div>
 
                 <form class="match-form" id="addMatchForm">
-                    <input type="hidden" id="ID_season" name="ID_season" value="<%= data.ID_season %>">
+                    <input type="hidden" id="season" name="season" value="<%= data.season %>">
                     <div class="input-container">
                         <div>
                             <label for="teamId1">Home Team:</label>
@@ -83,11 +83,11 @@
                 const submitButton = document.getElementById('addMatchSubmitButton');
                 const overlay = document.getElementById('overlay');
                 const matchContainer = document.getElementById('matchContainer');
-                const seasonId = '<%= data.ID_season %>';
+                const seasonId = '<%= data.season %>';
                 const teamId1Select = document.getElementById('teamId1');
                 const teamId2Select = document.getElementById('teamId2');
 
-                submitButton.addEventListener('click', addMatch);
+                submitButton.addEventListener('click', addMatch());
 
                 addMatchButton.addEventListener('click', function () {
                     if (addMatchForm.style.display === 'none' || addMatchForm.style.display === '') {
@@ -103,6 +103,27 @@
                     addMatchForm.style.display = 'none';
                     overlay.style.display = 'none';
                 });
+
+                teamId1Select.addEventListener('change', updateTeamOptions);
+                teamId2Select.addEventListener('change', updateTeamOptions);
+            
+                function updateTeamOptions() {
+                    const team1Value = teamId1Select.value;
+                    const team2Value = teamId2Select.value;
+            
+                    const allOptions = `<% data.teams.forEach(function(season) { %>
+                    <option value="<%=season._id%>"><%=season.name%></option>
+                <% }); %>`;
+            
+                    const team1Options = team1Value ? allOptions.replace(`value="${team1Value}"`, 'disabled') : allOptions;
+                    const team2Options = team2Value ? allOptions.replace(`value="${team2Value}"`, 'disabled') : allOptions;
+            
+                    teamId2Select.innerHTML = `<option value="">Chọn đội bóng</option>${team1Options}`;
+                    teamId1Select.innerHTML = `<option value="">Chọn đội bóng</option>${team2Options}`;
+            
+                    if (team1Value) teamId1Select.value = team1Value;
+                    if (team2Value) teamId2Select.value = team2Value;
+                }
 
                 // Hàm để hiển thị các trận đấu
                 async function displayMatches() {
