--- a/backend/views/pages/rank.ejs
+++ b/backend/views/pages/rank.ejs
@@ -49,7 +49,7 @@
                 .then(data => {
                     rankingBody.innerHTML = '';
                     data.forEach((team, index) => {
-                        fetch(`/api/v1/team/view/idteam/${team.ID_team}`)
+                        fetch(`/api/v1/team/view/idteam/${team.team}`)
                             .then(response => response.json())
                             .then(teamData => {
                                 const row = document.createElement('tr');
